--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,13 @@
 .#*
 \#*\#
 *~
-url/
-elpa/
-saveplace
-ido.last
-ac-comphist.dat
-bookmarks
 projectile-bookmarks.eld
-/configuration.el
-/configuration.html
-/configuration.pdf
-/configuration.tex
-/smex-items
-image-dired
-/network-security.data
-/tramp
-eshell
-thumbs
-/.mc-lists.el
-games
-/projectile.cache
-/eww-bookmarks
+elpa/
+elisp/
+ido.last
+configuration.el
+eshell/
+auto-save-list/
+ac-comphist.dat
+custom-settings.el
+transient/
